  - Added an option to ignore invalid tags as much as possible
    instead of exiting at the first error detected.
  - Added an option to reset the file timestamps in order to
    correctly start at zero, for example if the file has been
    incorrectly split by buggy tools
  - Added an option to display informative messages while processing
    (not quite exhaustive for the moment)

Version 1.0.11 (2010-01-25)
  - Bug fix release.
  - Fixed video resolution detection when the first video frame
    is not a keyframe.
  - Fixed invalid timestamp handling in the case of decreasing timestamps.
  - Fixed AVC resolution computation when frame cropping rectangle
    is used.
  - Fixed handling of files with a non-zero starting timestamp.
  - Fixed datasize tag computation so only metadata are taken
    into account.

Version 1.0.10 (2009-09-02)
  - Bug fix release.
  - Fixed amf_data_dump numeric format.
  - Fixed extended timestamp handling.
  - Fixed video resolution detection causing a crash in the case
    the video tag data body has less data than required.

Version 1.0.9 (2009-06-23)
  - Bug fix release.
  - Fixed large file support so it will work for files bigger than 4GB.
  - Fixed date handling in AMF according to the official spec.
  - Fixed extended timestamp handling.
  - Fixed a bug causing reading invalid tags to potentially lead to
    memory overflow and creation of invalid files.

Version 1.0.8 (2009-05-08)
  - Added support for arbitrary large files (2GB+).
  - Added support for AVC (H.264) video resolution detection.
  - Added support for the Speex codec and rarely met video frame types.
  - Fixed a bug where two consecutive tags of different types and
    with decreasing timestamps would cause extended timestamps
    to be incorrectly used for the next tags.
  - Fixed a bug where zero would be used as video height and width
    if video resolution could not be detected.
  - Fixed a bug causing flvdump to crash after reading invalid tags.